# DHS_KeywordSystem

./: .env  .env.example  .gitignore  Dockerfile  ICON_PICKER_FINAL.md  ICON_PICKER_FIXED.md  README.md  TEST_ICON_PICKER.md  docker-compose.yml  pyproject.toml  rename_users_to_members.py  requirements-dev.txt  requirements.txt  test_backup.py  test_backup_full.py  wsgi.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
app/: __init__.py  config.py  extensions.py  forms.py  keyword_linker.py  models.py  seed.py  sitemap.py
app/admin/: routes.py
app/auth/: discord.py  routes.py
app/main/: routes.py
app/static/: manifest.json  robots.txt  sw.js
app/templates/: base.html
app/utils/: __init__.py  ai_service.py  backup_scheduler.py  seo.py  (+5 more)
docs/: DEPLOYMENT_CHECKLIST.md  INITIAL_STATE_FIX.md  KEYWORD_EDITOR_JS_FIX.md  MARKDOWN_PREVIEW_FIX.md  MARKDOWN_RENDERING_ENHANCEMENTS.md  MOBILE_SEARCH_FIX.md  NEWLINE_FIX_SUMMARY.md  PTERODACTYL_DEPLOYMENT_GUIDE.md  PYTHON_MODULE_MAINTENANCE_GUIDE.md  VALIDATION_INDICATOR_FIX.md  XSS_SECURITY_FIXES.md
instance/: app.db
tests/: check_seo.py  conftest.py  test_ai_service.py  test_bopomofo.py  test_chinese_seo.py  test_data_export_import.py  test_json_api_fix.py  test_keyword_linking.py  test_main.py  test_markdown_preview_api.py  test_markdown_rendering.py  test_markdown_xss_protection.py  test_newline_preservation.py  test_plain_text_seo.py  test_pypinyin_api.py  test_seo_generation.py  test_sitemap.py  test_updated_seo.py  test_xss_protection.py  test_youtube_utils.py  test_youtube_validation.py
(+69 files in other folders)
